<resources>
    <string name="app_name">9358管理者</string>
    <string name="company_name">深圳市小摩豆网络科技有限公司</string>
    <string name="version_name">3.6.0</string>
    <string name="login">登录</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="content_description">pic</string>
    <string name="amount_unit">元</string>
    <string name="amount_unit_format">%1$d元</string>
    <string name="float_amount_unit_format">%1$.2f元</string>
    <string name="count_unit">次</string>
    <string name="person_unit">人</string>
    <string name="person_units">人次</string>
    <string name="took_unit">个</string>
    <string name="coupon_unit">张</string>
    <string name="person_unit_format">%1$d人</string>
    <string name="bad_comment_unit_format">差评 %1$d</string>
    <string name="value_with_braces">(%s)</string>
    <string name="today">今天</string>
    <string name="current_week">本周</string>
    <string name="current_month">本月</string>
    <string name="accumulate">累计</string>
    <string name="accumulate_with_semi_colon">累计 :</string>
    <string name="visit_accumulate_with_semi_colon">网店访客累计 :</string>
    <string name="main_page_account_income_total">营销活动收入累计 :</string>
    <string name="wifi_accumulate_with_semi_colon">wifi宣传累计 :</string>
    <string name="btn_consume">核销</string>
    <string name="btn_send">发送</string>
    <string name="btn_setting">设置</string>
    <string name="btn_back">返回</string>
    <string name="btn_more">更多</string>
    <string name="btn_filter">筛选</string>
    <string name="btn_colse">关闭</string>
    <string name="btn_delete">删除</string>
    <string name="btn_save">保存</string>
    <string name="btn_confirm">确定</string>
    <string name="switch_off">已关闭</string>
    <string name="switch_on">已打开</string>
    <string name="next_step">下一步</string>
    <string name="previous_step">上一步</string>
    <string name="preview">预览</string>
    <string name="token_expired_error_msg">账号在其他的地方登录，请重新登录</string>
    <string name="bind_client_id_failed">消息推送服务初始化失败</string>
    <string name="btn_check_upgrade">检查更新</string>
    <string name="login_activity_input_username">请输入账号</string>
    <string name="login_activity_input_password">请输入密码</string>
    <string name="login_activity_hint_username_not_empty">用户名不能为空</string>
    <string name="login_activity_hint_password_not_empty">密码不能为空</string>
    <string name="login_activity_hint_server_host_not_empty">服务器不能为空</string>
    <string name="home_activity_index">首页</string>
    <string name="home_activity_comment">消息</string>
    <string name="home_activity_customer_management">客情管理</string>
    <string name="home_activity_order">订单</string>
    <string name="home_activity_coupon">优惠券</string>
    <string name="home_activity_marketing">营销</string>
    <string name="main_activity_title">首页</string>
    <string name="main_activity_order_manage">订单管理</string>
    <string name="main_activity_coupon_consume">优惠券核销</string>
    <string name="main_activity_statistics">数据统计</string>
    <string name="main_activity_ranking">排行榜</string>
    <string name="main_activity_paid_order_consume">预约订单核销</string>
    <string name="action_setting">系统设置</string>
    <string name="action_update">版本更新</string>
    <string name="action_feedback">意见反馈</string>
    <string name="action_about_us">关于我们</string>
    <string name="action_service">专属客服</string>
    <string name="service_phone">13973537138</string>
    <string name="action_club_list">店铺列表</string>
    <string name="action_logout">退出登录</string>
    <string name="logout_success">成功退出</string>
    <string name="action_choice_club">选店查看</string>
    <string name="action_change_password">修改密码</string>
    <string name="action_order_filter_all"> 全部订单</string>
    <string name="action_order_filter_submit">未接受订单</string>
    <string name="action_order_filter_accepted">已接受订单</string>
    <string name="action_order_filter_rejected">已拒绝订单</string>
    <string name="action_order_filter_failured">已失效订单</string>
    <string name="action_order_filter_completed">已完成订单</string>
    <string name="action_order_filter_overtime">已超时订单</string>
    <string name="action_order_filter_cancel">已取消订单</string>
    <string name="action_order_filter_refund">已退款订单</string>
    <string name="consume_activity_title">优惠券核销</string>
    <string name="coupon_activity_title">优惠券</string>
    <string name="user_coupon_list_activity_title">优惠券</string>
    <string name="capture_activity_title">二维码扫描</string>
    <string name="browser_activity_title">9358</string>
    <string name="about_us_activity_title">关于我们</string>
    <string name="feedback_activity_title">意见反馈</string>
    <string name="pay_activity">支付</string>
    <string name="about_us_activity_check_upgrade">检查更新</string>
    <string name="capture_activity_unrecognize_qr">未能识别此二维码</string>
    <string name="feedback_activity_submit">提交</string>
    <string name="feedback_activity_submit_not_empty">请输入反馈内容</string>
    <string name="feedback_activity_submit_successful">已成功提交</string>
    <string name="feedback_activity_content_hint">请输入您的意见或建议</string>
    <string name="empty_view_failed">加载失败，点击刷新</string>
    <string name="empty_view_empty">暂无数据</string>
    <string name="empty_view_loading">正在加载&#8230;</string>
    <string name="consume_activity_coupon_consume_title">优惠券使用</string>
    <string name="consume_activity_coupon_usage_title">优惠券</string>
    <string name="consume_activity_qrcode_scan">扫一扫</string>
    <string name="consume_activity_phone_input_hint">请输入手机号码或者优惠码</string>
    <string name="consume_activity_coupon_consume">立即使用</string>
    <string name="consume_activity_coupon_list_title">优惠券</string>
    <string name="consume_activity_coupon_list_refresh">刷新</string>
    <string name="consume_activity_coupon_phone_and_no_empty">用户手机号码或者优惠券码不能为空</string>
    <string name="consume_activity_qrcode_consume_title">扫描核销</string>
    <string name="consume_activity_qrcode_consume_sub_title">扫描用户优惠券二维码核销</string>
    <string name="consume_activity_manually_consume_title">手工核销</string>
    <string name="consume_activity_manually_consume_sub_title">输入手机号码或者优惠码核销</string>
    <string name="consume_activity_detail_title">优惠券使用</string>
    <string name="consume_activity_detail_sub_title">查看优惠券使用详情</string>
    <string name="consume_activity_empty_coupon">暂无优惠券</string>
    <string name="consume_activity_refresh_coupons_failed">刷新列表失败，请稍候重试</string>
    <string name="consume_activity_refresh_coupons_success">优惠券列表刷新成功</string>
    <string name="consume_refresh">刷新</string>
    <string name="user_phone_format_error">用户手机号码输入格式不对</string>
    <string name="coupon_info_empty">优惠券信息为空，请确认</string>
    <string name="logout_confirm_title">系统提示</string>
    <string name="logout_confirm_message">确认要退出当前帐号</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="title_activity_capture">二维码扫描</string>
    <string name="scan_text">将二维码放入框内，即可自动扫描</string>
    <string name="order_list_activity_title">订单管理</string>
    <string name="order_list_activity_order_not_exist">=_=!!, 还没有订单哦</string>
    <string name="order_list_item_tech_desc">预约技师</string>
    <string name="order_list_item_tech_serial">编号</string>
    <string name="order_list_item_item_desc">预约项目</string>
    <string name="order_list_item_time_desc">预约时间</string>
    <string name="order_list_item_reject">拒绝</string>
    <string name="order_list_item_accept">接受</string>
    <string name="order_list_item_failure">爽约</string>
    <string name="order_list_item_complete">到店</string>
    <string name="order_list_item_not_decided">到店选择</string>
    <string name="order_list_item_loading">点击或者上拉，加载更多数据</string>
    <string name="order_list_item_no_more">----------已经全部加载完毕----------</string>
    <string name="order_list_item_empty">=_=!!, 还没有数据哦</string>
    <string name="verification_record_list_item_loading">点击或者上拉，加载更多数据</string>
    <string name="verification_record_list_item_next_month">点击或者上拉，加载下个月数据</string>
    <string name="verification_record_list_item_no_more">----------已经全部加载完毕----------</string>
    <string name="verification_record_list_item_empty">=_=!!, 还没有数据哦</string>
    <string name="order_detail_delete_order_confirm">确认删除订单</string>
    <string name="order_detail_reject_order_confirm">确认拒绝订单</string>
    <string name="order_detail_failure_order_confirm">确认失效订单</string>
    <string name="order_detail_expire_order_confirm">确认过期</string>
    <string name="order_detail_verified_order_confirm">确认核销</string>
    <string name="function_not_work_yet">该功能尚未开放，敬请期待</string>
    <string name="get_club_failed">获取会所信息失败</string>
    <string name="get_club_auth_config_failed">获取会所权限配置信息失败</string>
    <string name="authority_forbidden">您的权限不足，请联系管理员</string>
    <string name="coupon_list_item_activity_duration_desc">活动日期</string>
    <string name="coupon_list_item_coupon_duration_desc">券有效期</string>
    <string name="coupon_list_item_coupon_use_duration_desc">使用时段</string>
    <string name="coupon_list_item_share">分享</string>
    <string name="coupon_activity_coupon_desc">优惠说明</string>
    <string name="coupon_activity_coupon_use_desc">使用说明</string>
    <string name="coupon_activity_coupon_use_item_desc">限定项目</string>
    <string name="coupon_activity_coupon_commission_desc">打赏金额</string>
    <string name="coupon_activity_coupon_data_desc">使用数据</string>
    <string name="coupon_activity_coupon_use">核销</string>
    <string name="user_coupon_list_activity_phone_number">手机号码</string>
    <string name="user_coupon_list_activity_coupon_number">优惠码</string>
    <string name="user_coupon_list_activity_coupon_not_exist">优惠券不存在</string>
    <string name="coupon_use_data_activity_title">优惠券使用数据</string>
    <string name="coupon_use_data_activity_count_desc">使用次数</string>
    <string name="coupon_use_list_item_loading">点击或者上拉，加载更多数据</string>
    <string name="coupon_use_list_item_no_more"> ^_^, 没有更多数据</string>
    <string name="coupon_use_list_item_empty">=_=!!, 还没有数据哦</string>
    <string name="wx_entry_activity_title">微信分享</string>
    <string name="share_description">此券可在%s使用，分享给朋友获得更多优惠</string>
    <string name="share_description_without_club_name">分享给朋友获得更多优惠</string>
    <string name="share_to_friend">发送给朋友</string>
    <string name="share_to_timeline">分享朋友圈</string>
    <string name="share_to_others">更多</string>
    <string name="wx_errcode_success">分享成功</string>
    <string name="wx_errcode_cancel">分享已取消</string>
    <string name="wx_errcode_deny">分享被拒绝</string>
    <string name="wx_errcode_unknown">分享返回</string>
    <string name="setting_activity_title">系统设置</string>
    <string name="dialog_system_message">系统消息</string>
    <string name="request_permission">请求权限</string>
    <string name="layout_technician_ranking_title">排行榜</string>
    <string name="layout_technician_ranking_check_all">全部</string>
    <string name="layout_technician_star_register_user">拓客之星</string>
    <string name="layout_technician_star_sales">销售之星</string>
    <string name="layout_technician_star_service">服务之星</string>
    <string name="layout_technician_no_technician">暂无技师</string>
    <string name="order_verification_info">订单信息</string>
    <string name="verification_name">预约人：       </string>
    <string name="verification_start_time">到店时间：</string>
    <string name="verification_end_time">下单时间：</string>
    <string name="verification_tech_name">预约技师：</string>
    <string name="verification_pay">预付定金：</string>
    <string name="verification_state">订单状态：</string>
    <string name="verification_order_sure">确认核销</string>
    <string name="verification_order_past_due">确认过期</string>
    <string name="verification_order_cancel">取消</string>
    <string name="staff_data_hint_text">(未选技师订单不统计)</string>
    <string name="staff_data_ranking_total">总排名</string>
    <string name="staff_data_staff_text">员工</string>
    <string name="staff_data_staff_order">员工订单</string>
    <string name="staff_data_order">预约</string>
    <string name="staff_data_visitor">到店</string>
</resources>