<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_technician_ranking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_10"
    android:background="@drawable/selector_round_corner_list_item_clicked"
    android:orientation="vertical">

    <RelativeLayout style="@style/relative_layout_title_style">

        <TextView
            style="@style/main_fragment_layout_title_left_style"
            android:drawableLeft="@drawable/ic_ranking"
            android:text="@string/layout_technician_ranking_title" />

        <TextView
            style="@style/main_fragment_layout_title_right_style"
            android:text="@string/layout_technician_ranking_check_all" />
    </RelativeLayout>

    <View style="@style/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_space">

        <!--拓客之星-->
        <LinearLayout
            android:id="@+id/ll_star_user"
            style="@style/main_fragment_layout_technician_ranking_section_style">

            <TextView
                android:id="@+id/tv_title_user"
                style="@style/main_fragment_layout_technician_ranking_label_style"
                android:text="@string/layout_technician_star_register_user" />

            <com.xmd.manager.widget.CircleImageView
                android:id="@+id/cv_star_register_user"
                style="@style/main_fragment_layout_technician_ranking_avatar_style" />

            <TextView
                android:id="@+id/tv_star_register_user"
                style="@style/main_fragment_layout_technician_ranking_value_style"
                android:text="@string/layout_technician_no_technician" />

        </LinearLayout>

        <View style="@style/vertical_line" />

        <!-- 销售之星 -->
        <LinearLayout
            android:id="@+id/ll_star_sale"
            style="@style/main_fragment_layout_technician_ranking_section_style">

            <TextView
                android:id="@+id/tv_title_sale"
                style="@style/main_fragment_layout_technician_ranking_label_style"
                android:text="@string/layout_technician_star_sales" />

            <com.xmd.manager.widget.CircleImageView
                android:id="@+id/cv_star_sales"
                style="@style/main_fragment_layout_technician_ranking_avatar_style" />

            <TextView
                android:id="@+id/tv_star_sales"
                style="@style/main_fragment_layout_technician_ranking_value_style"
                android:text="@string/layout_technician_no_technician" />

        </LinearLayout>

        <View style="@style/vertical_line" />

        <!-- 服务之星 -->
        <LinearLayout
            android:id="@+id/ll_star_service"
            style="@style/main_fragment_layout_technician_ranking_section_style">

            <TextView
                android:id="@+id/tv_title_service"
                style="@style/main_fragment_layout_technician_ranking_label_style"
                android:text="@string/layout_technician_star_service" />

            <com.xmd.manager.widget.CircleImageView
                android:id="@+id/cv_star_service"
                style="@style/main_fragment_layout_technician_ranking_avatar_style" />

            <TextView
                android:id="@+id/tv_star_service"
                style="@style/main_fragment_layout_technician_ranking_value_style"
                android:text="@string/layout_technician_no_technician" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
